--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <!-- Header -->
 <header>
-    <a href="">WebStudio</a>
+    
     <nav>
+        <a href="">WebStudio</a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -24,11 +25,13 @@
 <main>
     <!-- Section 1 -->
     <section>
-        <h1>Эффективные решения <br> для вашего бизнеса</h1>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
     </section>
     <!-- Section 2 -->
     <section>
+        <!-- прихований заголовок -->
+        <h2>Преимущества</h2>
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
@@ -47,6 +50,9 @@
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
+    </section>
+    <!-- Section 3 -->
+    <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li><img src="./images/about-img-1.jpg" alt="Робочий процес 1" width="370" height="294"></li>
@@ -54,7 +60,7 @@
             <li><img src="./images/about-img-3.jpg" alt="Робочий процес 3" width="370" height="294"></li>
         </ul>
     </section>
-    <!-- Section 3 -->
+    <!-- Section 4 -->
     <section>
         <h2>Наша команда</h2>
         <ul>
@@ -84,7 +90,7 @@
         <li>
             <a href="https://goo.gl/maps/3tdsHGGzz4T1NZrAA"
             target="_blank"
-            rel="noopener noreferrer nofollow"
+            rel="noopener noreferrer"
             >
             г. Киев, пр-т Леси Украинки, 26</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
