--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body>
     <!-- Header -->
 <header>
-    
     <nav>
         <a href="">WebStudio</a>
         <ul>
             <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
+            <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
     </nav>
@@ -23,12 +22,12 @@
     </ul>
 </header>
 <main>
-    <!-- Section 1 -->
+    <!-- Section Эффективные решения для вашего бизнеса -->
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
     </section>
-    <!-- Section 2 -->
+    <!-- Section Преимущества -->
     <section>
         <!-- прихований заголовок -->
         <h2>Преимущества</h2>
@@ -51,7 +50,7 @@
             </li>
         </ul>
     </section>
-    <!-- Section 3 -->
+    <!-- Section Чем мы занимаемся -->
     <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
@@ -60,7 +59,7 @@
             <li><img src="./images/about-img-3.jpg" alt="Робочий процес 3" width="370" height="294"></li>
         </ul>
     </section>
-    <!-- Section 4 -->
+    <!-- Section Наша команда -->
     <section>
         <h2>Наша команда</h2>
         <ul>
